@@ -1,9 +1,9 @@
 #!/usr/bin/python
 # -*- coding: utf-8 -*-
 # Writer (c) 2014, otaranda@hotmail.com
-# Rev. 2.5.1
+# Rev. 2.6.1
 
-_REVISION_ = '2.5.1'
+_REVISION_ = '2.6.1'
 
 _DEV_VER_ = '1.0.0'
 _ADDOD_ID_= 'plugin.video.rodina.tv'
@@ -541,6 +541,7 @@ class RodinaTV():
         self.language = self.addon.getLocalizedString
 
         self.handle = int(sys.argv[1])
+        if self.handle == -1: self.handle = 99
         self.params = sys.argv[2]
         self.mode = ''
 
@@ -717,6 +718,8 @@ class RodinaTV():
                         'add2f'     : self.addon.getLocalizedString(23001),
                         'del2f'     : self.addon.getLocalizedString(23002),
                         'delfav'    : self.addon.getLocalizedString(23003),
+                        'go2arch'   : self.addon.getLocalizedString(23004),
+                        'go2live'   : self.addon.getLocalizedString(23005),
                         'mon'       : self.addon.getLocalizedString(20001),
                         'tue'       : self.addon.getLocalizedString(20002),
                         'wed'       : self.addon.getLocalizedString(20003),
@@ -862,7 +865,7 @@ class RodinaTV():
         cache = ''
         skipt = False
         if type == 'tv':
-            cquery = '?query=%s&value=%s&key=icon' % ('get_channels', '250_250_1')
+            cquery = '?query=%s&value=%s&key=icon' % ('get_channels', '300_300_0')
             fn = self.cache_chan
             tt = time.time()
         elif type == 'etv':
@@ -1053,7 +1056,7 @@ class RodinaTV():
             item.setProperty('fanart_image', self.fanart)
             
             if len(ctPopup) > 0:
-                item.addContextMenuItems(ctPopup)
+                item.addContextMenuItems(ctPopup,replaceItems=True)
             
             xbmcplugin.addDirectoryItem(self.handle, sys.argv[0] + ctUrl, item, ctFolder) 
             self.log("ctTitle: %s"  % ctTitle, 2) 
@@ -1125,7 +1128,7 @@ class RodinaTV():
 #        self.get_tstatus()
 #        self.get_client()
 #        self.get_settings()
-        print self.view_date
+#        print self.view_date
         if self.view_date == 'true': amode = 'adate'
         else: amode = 'arch'
         ct_main = [('?mode=%s&portal=%s&icon=%s' % ('cat', QT(self.portal), self.icons['i_tv'],),   self.icons['i_tv'],   True, {'title': self.lng['livetv']}, []),
@@ -1238,14 +1241,29 @@ class RodinaTV():
                         except: number = ''
                         a_icon45 = common.parseDOM(raw, "item", attrs={"name": "default"})
                         a_icon250 = common.parseDOM(raw, "item", attrs={"name": "250_250_1"})
+                        a_icon300 = common.parseDOM(raw, "item", attrs={"name": "300_300_0"})
                         icon = ''
-                        if len(a_icon250) > 0:
-                            try: icon = a_icon250[0]
+                        if len(a_icon300) > 0:
+                            try: icon = a_icon300[0]
                             except: icon = ''
+                        if icon == '' and len(a_icon250) > 0:
+                            try: icon = a_icon250[0]
+                            except: icon = ''                            
                         if icon == '' and len(a_icon45) > 0:
                             try: icon = a_icon45[0]
                             except: icon = ''
                         if icon == '': icon = self.path_icons_tv
+                        
+                        try: has_record = common.parseDOM(raw, "item", attrs={"name": "has_record"})[0]
+                        except: has_record = ''
+                        if has_record == '1':
+                            dts = time.localtime()
+                            dnow = int(time.mktime((dts.tm_year, dts.tm_mon, dts.tm_mday, 0, 0, 0, 0, 0, 0)))
+
+                            uri2 = sys.argv[0] + '?mode=aepg&numb=%s&portal=%s&pwd=%s&rec=%s&icon=%s&dt=%s' % (number, QT(self.portal), has_passwd, has_record, QT(icon), dnow)
+                            if self.cat != '': uri2 += '&cat=' + self.cat
+                            if self.sort != '': uri2 += '&sort=' + self.sort
+                            popup.append((self.lng['go2arch'], 'XBMC.Container.Update(%s)'%uri2,))
 
                         plot = ''
                         title2nd = ''
@@ -1422,21 +1440,32 @@ class RodinaTV():
                             except: number = ''
                             a_icon45 = common.parseDOM(raw, "item", attrs={"name": "default"})
                             a_icon250 = common.parseDOM(raw, "item", attrs={"name": "250_250_1"})
+                            a_icon300 = common.parseDOM(raw, "item", attrs={"name": "300_300_0"})
                             icon = ''
-                            if len(a_icon250) > 0:
-                                try: icon = a_icon250[0]
+                            if len(a_icon300) > 0:
+                                try: icon = a_icon300[0]
                                 except: icon = ''
+                            if icon == '' and len(a_icon250) > 0:
+                                try: icon = a_icon250[0]
+                                except: icon = ''                                
                             if icon == '' and len(a_icon45) > 0:
                                 try: icon = a_icon45[0]
                                 except: icon = ''
                             if icon == '': icon = self.path_icons_tv
                             if title != '' and number != '':
                                 if self.view_date == 'true' and self.adt != '':
-                                    nUrl = '?mode=%s&portal=%s&numb=%s&pwd=%s&rec=%s&icon=%s&dt=%s' % ('aepg', self.portal, number, has_passwd, has_record, icon, self.adt)
+                                    nUrl = '?mode=%s&portal=%s&numb=%s&pwd=%s&rec=%s&icon=%s&cat=%s&sort=%s&dt=%s' % ('aepg', self.portal, number, has_passwd, has_record, icon, self.cat, self.sort, self.adt)
                                 else:
-                                    nUrl = '?mode=%s&portal=%s&numb=%s&pwd=%s&rec=%s&icon=%s' % ('adate', self.portal, number, has_passwd, has_record, icon)
+                                    nUrl = '?mode=%s&portal=%s&numb=%s&pwd=%s&rec=%s&icon=%s&cat=%s&sort=%s' % ('adate', self.portal, number, has_passwd, has_record, icon, self.cat, self.sort)
                                 d_chan[number] = (nUrl, icon, True, {'title': title}, popup)
-#                                ct_chan.append(('?mode=%s&portal=%s&numb=%s&pwd=%s&rec=%s&icon=%s' % ('adate', self.portal, number, has_passwd, has_record, icon), icon, True, {'title': title}, popup))
+#                                ct_chan.append(('?mode=%s&portal=%s&numb=%s&pwd=%s&rec=%s&icon=%s' % 
+#                                    ('adate', self.portal, number, has_passwd, has_record, icon), icon, True, {'title': title}, popup))
+                                
+                                uri2 = sys.argv[0] + '?mode=tv&portal=%s' % ( QT(self.portal))
+                                if self.cat != '': uri2 += '&cat=' + self.cat
+                                if self.sort != '': uri2 += '&sort=' + self.sort
+#                                uri2 = sys.argv[0] + '?mode=tvplay&portal=%s&numb=%s&pwd=%s&icon=%s' % (self.portal, number, has_passwd, icon)
+                                popup.append((self.lng['go2live'], 'XBMC.Container.Update(%s)'%uri2,))
 
             if self.sort == '':
                 chList = d_chan.values()
@@ -1447,6 +1476,7 @@ class RodinaTV():
                 for num in a_nums:
                     try: ct_chan.append(d_chan[num])
                     except: pass
+
             self.list_items(ct_chan, True)   
             
                     
@@ -1461,11 +1491,12 @@ class RodinaTV():
             lt = time.localtime(dt)
             title = time.strftime("%x ", lt) + self.dweek[lt.tm_wday]
             if self.view_date == 'true':
-                ct_date.append(('?mode=%s&portal=%s&icon=%s&dt=%s' % 
-                ('arch', self.portal, self.cicon, dt), self.cicon, True, {'title': title}, []))
+                uri = '?mode=%s&portal=%s&icon=%s&dt=%s' % ('arch', self.portal, self.cicon, dt)
             else:
-                ct_date.append(('?mode=%s&portal=%s&numb=%s&pwd=%s&icon=%s&dt=%s' % 
-                ('aepg', self.portal, self.numb, self.has_pwd, self.cicon, dt), self.cicon, True, {'title': title}, []))
+                uri = '?mode=%s&portal=%s&numb=%s&pwd=%s&icon=%s&cat=%s&dt=%s' % ('aepg', self.portal, self.numb, self.has_pwd, self.cicon, self.cat, dt)
+
+            if self.sort != '' : uri += '&sort=' + self.sort
+            ct_date.append((uri, self.cicon, True, {'title': title}, []))
             
         self.list_items(ct_date, True)
 
@@ -1479,18 +1510,33 @@ class RodinaTV():
             lepg = d_epg[self.numb]
         except:
             return
+         
+        frun = 0
         for ebgn, eend, ename, edescr, pid, rec, utstart in lepg:
             popup = []
             title = '%s-%s %s' % (ebgn, eend, ename)
-            plot = '[COLOR FF999999]%s[/COLOR]' % (edescr)
-            if rec != '1':
-                title = '[COLOR FFdc5310]%s[/COLOR]' % (title)
-#            else: 
-#                uri2 = sys.argv[0] + '?mode=%s&portal=%s&numb=%s&pwd=%s&icon=%s&rec=%s&start=%s' % ('shift', self.portal, self.numb, self.has_pwd, self.cicon, rec, utstart)
-#                popup.append(('RodinaTV Shift to Start', 'RunPlugin(%s)'%uri2,))
-            
+            plot = '%s  [COLOR FF999999]%s[/COLOR]' % (ename, edescr)
 
-            ct_chan.append(('?mode=%s&portal=%s&numb=%s&pwd=%s&icon=%s&rec=%s&start=%s' % ('tvplay', self.portal, self.numb, self.has_pwd, self.cicon, rec, utstart), self.cicon, False, {'title': title, 'plot':plot}, popup))
+#            uri2 = sys.argv[0] + '?mode=tvplay&portal=%s&numb=%s&pwd=%s&icon=%s' % (self.portal, self.numb, self.has_pwd, self.cicon)
+            uri2 = sys.argv[0] + '?mode=tv&portal=%s' % (QT(self.portal))
+            if self.cat != '': uri2 += '&cat=' + self.cat
+            if self.sort != '': uri2 += '&sort=' + self.sort
+            popup.append((self.lng['go2live'], 'XBMC.Container.Update(%s)'%uri2,))
+            
+            if rec != '1':
+                if frun == 0: 
+                    frun = 1
+                    title = self.color['3'] + '%s[/COLOR]' % (title)
+                else:
+                    title = '[COLOR FFdc5310]%s[/COLOR]' % (title)
+
+
+            if frun == 1:
+                frun = 2
+                uri2 = '?mode=tvplay&portal=%s&numb=%s&pwd=%s&icon=%s' % (QT(self.portal), self.numb, self.has_pwd, self.cicon)
+                ct_chan.append((uri2, self.cicon, False, {'title': title, 'plot':plot}, popup))
+            else:
+                ct_chan.append(('?mode=%s&portal=%s&numb=%s&pwd=%s&icon=%s&rec=%s&start=%s' % ('tvplay', self.portal, self.numb, self.has_pwd, self.cicon, rec, utstart), self.cicon, False, {'title': title, 'plot':plot}, popup))
 
         if self.view_date == 'true':
 
@@ -1505,6 +1551,11 @@ class RodinaTV():
             title = time.strftime("%x ", lt) + self.dweek[lt.tm_wday]
             ct_chan.append(('?mode=%s&portal=%s&numb=%s&pwd=%s&icon=%s&dt=%s' % 
                 ('aepg', self.portal, self.numb, self.has_pwd, self.cicon, ntime), self.cicon, True, {'title': self.color['6'] + self.lng['next'] + title + '[/COLOR]'}, []))
+                
+        uri2 = '?mode=tv&cat=%s&portal=%s&sort=%s' % (self.cat, QT(self.portal), self.sort)
+        ct_chan.append((uri2, self.cicon, True, {'title': self.color['3'] + '--' + self.lng['livetv'] + '-- [/COLOR]'}, []))
+
+                
         self.list_items(ct_chan, False)   
         
     def m_setall(self):
@@ -2017,10 +2068,14 @@ class RodinaTV():
                     try: number = common.parseDOM(raw, "item", attrs={"name": "number"})[0]
                     except: number = ''
                     a_icon45 = common.parseDOM(raw, "item", attrs={"name": "icon_45_45"})
-                    a_icon100 = common.parseDOM(raw, "item", attrs={"name": "icon_100_100"})
-                    if len(a_icon100) > 0:
-                        try: icon = a_icon100[0]
+                    a_icon250 = common.parseDOM(raw, "item", attrs={"name": "250_250_1"})
+                    a_icon300 = common.parseDOM(raw, "item", attrs={"name": "300_300_0"})                    
+                    if len(a_icon300) > 0:
+                        try: icon = a_icon300[0]
                         except: icon = ''
+                    elif len(a_icon250) > 0:
+                        try: icon = a_icon250[0]
+                        except: icon = ''                        
                     elif len(a_icon45) > 0:
                         try: icon = a_icon45[0]
                         except: icon = ''
@@ -2066,8 +2121,6 @@ class RodinaTV():
         self.list_items(ct_cat, True)
 
 
-      
-
-        
+       
 rodina = RodinaTV()
 rodina.main()        
