@@ -31,6 +31,8 @@
     <string id="23001">RodinaTV Добавить в Избранное</string>
     <string id="23002">RodinaTV Удалить из Избранного</string>
     <string id="23003">Удалить из Избранного?</string>
+    <string id="23004">RodinaTV Архив Телеканала</string>
+    <string id="23005">RodinaTV Прямой Эфир</string>
 	<string id="10000">Russian</string>
 	<string id="11000">Общие настройки</string>
 	<string id="11001">Режимы просмотра</string> 
@@ -51,7 +53,7 @@
 	<string id="20005">Пятница</string>
 	<string id="20006">Суббота</string>
 	<string id="20007">Воскресение</string>	
-	<string id="20008">-ДАЛЕЕ-></string>
-	<string id="20009">-ВЧЕРА-^</string>
+	<string id="20008">--ДАЛЕЕ-&gt; </string>
+	<string id="20009">&lt;-ВЧЕРА-- </string>
 	<string id="20010">Часть</string>	
 </strings>
